# imgbox

./: .dockerignore  .gitignore  CLAUDE.md  DEVLOG.md  Dockerfile  LICENSE.txt  README.md  docker-compose.yml  package-lock.json
client/: index.html  package-lock.json  package.json
client/src/: App.jsx  index.css
client/src/components/: ImageEditor.jsx
docs/: clean-install-test.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: AdvancedSettings.jsx  ImageDropZone.jsx  ImageEditor.jsx  Setup.jsx  ThreeSpinner.jsx
frontend/src/components/dotmatrix/: dotm-square-4.tsx  dotmatrix-core.tsx
frontend/src/components/modes/: Edit.jsx  Flux2Klein.jsx  Identity.jsx  RemoveBackground.jsx
frontend/src/lib/: api.js  i18n.js  persist.js
frontend/src/spinners/: spinner.js
server/: app.py  background_remover.py  device.py  finedits.py  flux2klein_vp.py  identity.py  identity_store.py  model_registry.py  progress.py  pyproject.toml  requirement.txt
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  sidecar.rs
