[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bitsandbytes>=0.49.2",
    "diffusers==0.35.1",
    "fastapi>=0.135.1",
    "matplotlib>=3.10.8",
    "protobuf>=7.34.1",
    "python-multipart>=0.0.22",
    "scikit-learn>=1.8.0",
    "sentencepiece>=0.2.1",
    "tokenizers==0.19.1",
    "torch==2.8.0",
    "torchvision>=0.23.0",
    "transformers==4.44.0",
    "uvicorn[standard]>=0.42.0",
]
