[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "bitsandbytes>=0.49.2",
    "diffusers>=0.36",
    "fastapi>=0.135.1",
    "kornia>=0.8.2",
    "matplotlib>=3.10.8",
    "protobuf>=7.34.1",
    "python-multipart>=0.0.22",
    "qwen-vl-utils>=0.0.14",
    "scikit-learn>=1.8.0",
    "sentencepiece>=0.2.1",
    "timm>=1.0.27",
    "torch==2.8.0",
    "torchvision>=0.23.0",
    "transformers>=4.51,<5",
    "uvicorn[standard]>=0.42.0",
]
